--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "@line/bot-sdk": "8.2.0",
+    "axios": "^1.6.7",
     "discord.js": "14.14.1",
     "dotenv": "16.4.1",
     "express": "4.18.2"
