--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/client-s3": "3.515.0",
     "@line/bot-sdk": "8.2.0",
-    "axios": "^1.6.7",
+    "axios": "1.6.7",
     "discord.js": "14.14.1",
     "dotenv": "16.4.1",
     "express": "4.18.2"
